--- a/css/theming.css
+++ b/css/theming.css
@@ -1,21 +1,17 @@
 :root {
   --my-header-height: 64px;
-}
-
-body {
-  background-image: unset !important;
-  background-color: gray !important;
+  --my-header-bottom-margin: 0px;
 }
 
 #view-toggle {
-  top: calc(var(--my-header-height) + 10px);
+  top: calc(var(--my-header-height) + var(--my-header-bottom-margin));
 }
 
 body > #content,
 body > #content-vue {
   margin-top: 74px;
-  margin-top: calc(var(--my-header-height) + 10px);
-  height: calc(100% - env(safe-area-inset-bottom) - var(--my-header-height) - var(--body-container-margin) - 10px);
+  margin-top: calc(var(--my-header-height) + var(--my-header-bottom-margin));
+  height: calc(100% - env(safe-area-inset-bottom) - var(--my-header-height) - var(--body-container-margin) - var(--my-header-bottom-margin));
 }
 
 /* fix dashboard header */
@@ -24,10 +20,12 @@ body.dashboard--inverted:not(.dashboard--dark) .header-right > div:not(#settings
   filter: unset !important;
 }
 
+.header-right > div:hover {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+}
+
 header#header {
   height: var(--my-header-height) !important;
-  background-color: white !important;
-  border-bottom: 1px solid #dddddd;
 }
 header#header .header-right #settings #expand {
   height: 100%;
@@ -49,28 +47,6 @@ header#header .header-right #contactsmenu .header-menu__trigger {
 }
 header#header .header-right #contactsmenu .content .footer {
   display: none !important;
-}
-header#header .header-right > div:hover {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-header#header .header-right #contactsmenu .menutoggle {
-  filter: invert(100%);
-}
-header#header .header-right #contactsmenu .header-menu__trigger,
-header#header .header-right #notifications .header-menu__trigger {
-  opacity: 0.865 !important;
-}
-header#header .header-right #contactsmenu .header-menu__trigger svg,
-header#header .header-right #contactsmenu .header-menu__trigger img,
-header#header .header-right #notifications .header-menu__trigger svg,
-header#header .header-right #notifications .header-menu__trigger img {
-  filter: invert(100%);
-}
-header#header .header-right #unified-search > a {
-  opacity: 1 !important;
-}
-header#header .header-right #unified-search svg {
-  fill: #1f1f1f;
 }
 header#header .header-left > nav > #navigation {
   position: fixed;
@@ -96,15 +72,16 @@ nav.app-menu {
   display: none !important;
 }
 
+/*
 .icon-more-white {
-  background-color: #1f1f1f;
-  /* background-image: url('../img/grid.svg') !important; */
-  background-image: unset !important;
-  -webkit-mask: url("../img/grid.svg") no-repeat 50% 50%;
-  mask: url("../img/grid.svg") no-repeat 50% 50%;
-  background-size: 20px;
+	background-color: #1f1f1f;
+	// background-image: url('../img/grid.svg') !important;
+	background-image: unset !important;
+	-webkit-mask: url('../img/grid.svg') no-repeat 50% 50%;
+	mask: url('../img/grid.svg') no-repeat 50% 50%;
+	background-size: 20px;
 }
-
+*/
 header#header .header-left #nextcloud {
   width: 138px;
   padding: 0;
