--- a/css/color.scss
+++ b/css/color.scss
@@ -15,9 +15,14 @@ header#header {
 #contactsmenu .header-menu__trigger,
 #notifications .header-menu__trigger {
 	opacity: .865 !important;
-	svg,
 	img {
 		filter: invert(100%);
+	}
+}
+// for NC >= 28
+#header .header-right {
+	svg {
+		fill: #1f1f1f;
 	}
 }
 #unified-search {
