add custom style to public share pages (optional, default: enabled)
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/public.css
+++ b/css/public.css
@@ -16,4 +16,9 @@ footer,
   display: none !important;
 }
 
+#header #nextcloud {
+  color: #1f1f1f;
+  justify-content: start !important;
+}
+
 /*# sourceMappingURL=public.css.map */
