--- a/css/public.scss
+++ b/css/public.scss
@@ -16,3 +16,9 @@ footer,
 #talk-sidebar-trigger {
 	display: none !important;
 }
+
+// logo
+#header #nextcloud {
+	color: #1f1f1f;
+	justify-content: start !important;
+}
