--- a/css/theming.scss
+++ b/css/theming.scss
@@ -118,6 +118,15 @@ header#header {
 				left: unset;
 				//background-image: url('../img/phoenix_suite_logo-Assets/SVG/phoenix_suite_logo.svg');
 			}
+			.logo-wrapper {
+				display: flex;
+				width: 138px;
+				padding: 0;
+				margin: 0;
+				height: 100%;
+				align-items: center;
+				justify-content: center;
+			}
 			//.logo {
 			//	width: 80px;
 			//	height: 63px;
