fix header-right items color, remove filter introduced in NC 29
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/color.css
+++ b/css/color.css
@@ -25,6 +25,10 @@ header#header {
   fill: #1f1f1f;
 }
 
+#header .header-right > .header-menu:not(.user-menu) {
+  filter: unset !important;
+}
+
 #unified-search > a {
   opacity: 1 !important;
 }
