docs(reuse): Add SPDX header
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/css/theming.scss
+++ b/css/theming.scss
@@ -1,3 +1,7 @@
+/*!
+ * SPDX-FileCopyrightText: 2022 Nextcloud GmbH and Nextcloud contributors
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
 :root {
 	--my-header-height: 64px;
 	--my-header-bottom-margin: 0px;
