--- a/css/color.scss
+++ b/css/color.scss
@@ -1,3 +1,7 @@
+/*!
+ * SPDX-FileCopyrightText: 2023 Nextcloud GmbH and Nextcloud contributors
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
 :root {
 	--my-header-bottom-margin: 10px !important;
 }
