--- a/css/theming.scss
+++ b/css/theming.scss
@@ -49,6 +49,7 @@ header#header {
 		#contactsmenu #header-menu-contactsmenu {
 			top: 64px !important;
 		}
+		#assistant .header-menu,
 		#user-menu .header-menu__trigger,
 		#unified-search .header-menu__trigger,
 		#notifications .header-menu__trigger,
