fix assistant header menu button height
Signed-off-by: Julien Veyssier <julien-nc@posteo.net>

--- a/css/theming.scss
+++ b/css/theming.scss
@@ -53,6 +53,7 @@ header#header {
 			top: var(--my-header-height) !important;
 		}
 		#assistant .header-menu,
+		#assistant .header-menu button,
 		#user-menu .header-menu__trigger,
 		#unified-search .header-menu__trigger,
 		#notifications .header-menu__trigger,
