--- a/css/theming.css
+++ b/css/theming.css
@@ -54,11 +54,13 @@ header#header .header-end #contactsmenu #header-menu-contactsmenu {
   top: var(--my-header-height) !important;
 }
 header#header .header-right #assistant .header-menu,
+header#header .header-right #assistant .header-menu button,
 header#header .header-right #user-menu .header-menu__trigger,
 header#header .header-right #unified-search .header-menu__trigger,
 header#header .header-right #notifications .header-menu__trigger,
 header#header .header-right #contactsmenu .header-menu__trigger,
 header#header .header-end #assistant .header-menu,
+header#header .header-end #assistant .header-menu button,
 header#header .header-end #user-menu .header-menu__trigger,
 header#header .header-end #unified-search .header-menu__trigger,
 header#header .header-end #notifications .header-menu__trigger,
